--- a/index.css
+++ b/index.css
@@ -1,18 +1,27 @@
+.sidebar{
+    width:250px;
+    height:500px;
+    border: 5px solid black;
+    background-color: purple;
+}
 #grid{
     width: 500px;
     height: 500px;
-    margin:auto;
-    border: 5px solid;
-    border-color:red;
+    border: 5px solid black;
     background-color: blue;
     grid-template-columns: 125px 125px 125px 125px;
     grid-template-rows: 125px 125px 125px 125px;
     display:grid
 }
 #instructions{
-    width:250px;
-    height:500px;
-    border: 5px;
     border-right: 0px;
-    background-color: purple;
+}
+#gameContainer{
+    margin:auto;
+    background-color: teal;
+    grid-template-columns: 250px 500px 250px;
+    grid-template-rows: 500px;
+    display:grid;
+    width:fit-content;
+    height:fit-content;
 }
